Bug 1278251 - corrected assign instead of compare. r=bbouvier

MozReview-Commit-ID: 4QrWu0MOzJB